[project]
name = "queueio"
version = "0.5.0"
description = "Python background queues with an async twist"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ryanhiebert/queueio"
repository = "https://github.com/ryanhiebert/queueio"
authors = [
    { name = "Ryan Hiebert", email = "ryan@ryanhiebert.com" },
]
keywords = ["async", "queue", "background", "tasks", "rabbitmq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.14"
dependencies = [
    "dill>=0.3.9",
    "pika>=1.3.2",
    "textual>=3.2.0",
    "typer>=0.15.4",
]

[project.scripts]
queueio = "queueio.__main__:app"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.9.6",
    "textual-dev>=1.7.0",
    "types-pika>=1.2.0b1",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.queueio]
register = [
    "queueio.samples.basic",
    "queueio.samples.expanded",
    "queueio.samples.priority",
    "queueio.samples.queuevar",
]
pika = "amqp://localhost:5672"

[tool.pytest.ini_options]
timeout = 30

[tool.coverage.run]
branch = true
source = ["queueio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
